Add jpa DTO for Timeline and BusinessUnit and create projections